# nocturne

./: .env.example  Cargo.toml  README.md
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/app/: Cargo.toml
crates/app/src/: backend.rs  cache.rs  emoji.rs  fonts.rs  icons.rs  main.rs  mpris.rs  upscale.rs
crates/session/: Cargo.toml
crates/session/examples/: api.rs  features.rs  play.rs  plcheck.rs
crates/session/src/: lib.rs
crates/sink/: Cargo.toml
crates/sink/examples/: tone.rs
crates/sink/src/: lib.rs
crates/taste/: Cargo.toml
crates/taste/examples/: diagnose.rs  evaluate.rs  mood.rs  prove.rs  suggest.rs
crates/taste/src/: auth.rs  find.rs  lib.rs  llm.rs  mood.rs
docs/: SCOPE.md
