[package]
name = "nocturne-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Spotify Web API client for Nocturne: search, playlists, saved tracks, album art."

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
thiserror.workspace = true
tracing.workspace = true
futures-util = "0.3"
tokio = { workspace = true }
