[package]
name = "nocturne-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Spotify Web API client for Nocturne: search, playlists, saved tracks, album art."

[dependencies]
# `stream` is load-bearing: lib.rs uses bytes_stream(). Without it declared here the crate only
# compiles when some other workspace member happens to turn the feature on.
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
thiserror.workspace = true
tracing.workspace = true
futures-util = "0.3"
tokio = { workspace = true }
serde_json = "1"
