[package]
name = "nocturne-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "nocturne — native Spotify client for Rune (eframe/wgpu + livewall-uikit theme)."

[[bin]]
name = "nocturne"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29.1", default-features = false, features = ["wgpu", "default_fonts", "wayland"] }
egui = "0.29.1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
livewall-uikit = { path = "../../../../RustroverProjects/livewall-studio/crates/uikit" }
librespot-core.workspace = true
librespot-playback.workspace = true
nocturne-api = { path = "../api" }
nocturne-session = { path = "../session" }
nocturne-sink = { path = "../sink" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
futures-util = "0.3"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
ttf-parser = "0.25"
nocturne-taste = { path = "../taste" }
zbus = { version = "5", default-features = false, features = ["tokio"] }
