[package]
name = "nocturne-session"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Nocturne's librespot wrapper: OAuth auth, player control, Connect device, metadata."

[dependencies]
librespot-core.workspace = true
librespot-playback.workspace = true
librespot-connect.workspace = true
librespot-metadata.workspace = true
librespot-discovery.workspace = true
librespot-oauth.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true

futures-util = "0.3"
librespot-protocol = { git = "https://github.com/librespot-org/librespot", branch = "dev" }
protobuf = "3.7"
nocturne-api = { path = "../api" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

http = "1.3"
[dev-dependencies]
nocturne-taste = { path = "../taste" }
nocturne-sink = { path = "../sink" }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
librespot-core = { git = "https://github.com/librespot-org/librespot", branch = "dev" }
