[package]
name = "nocturne-taste"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Learned autoplay for Nocturne: embeds tracks and ranks what to play next with WatchTower's TensorSequenceTree."

[dependencies]
watchtower = { package = "WatchTower", path = "../../../../RustroverProjects/WatchTower" }
nocturne-api = { path = "../api" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing.workspace = true
